# autotools

apresentação/00/: configure.ac
apresentação/01/: configure.ac
apresentação/02/: configure.ac
apresentação/03/: configure.ac
apresentação/04/: config.status  configure  configure.ac  configure~
apresentação/04/autom4te.cache/: output.0  requests  traces.0
apresentação/05/: configure.ac
apresentação/05/m4/: .checks.m4.swp  checks.m4
apresentação/06/: configure.ac
apresentação/06/m4/: .checks.m4.swp  checks.m4
apresentação/07/: .configure.ac.swp  config.status  configure  configure.ac  configure~
apresentação/07/autom4te.cache/: output.0  requests  traces.0
apresentação/07/m4/: .checks.m4.swp  checks.m4
apresentação/08/: config.status  configure  configure.ac  configure~
apresentação/08/autom4te.cache/: output.0  traces.0
apresentação/08/m4/: check.m4
apresentação/09/m4/: check.m4
apresentação/10/: configure.ac
apresentação/10/m4/: check.m4
apresentação/11/: configure.ac
apresentação/11/m4/: checks.m4
apresentação/12/: README  configure.ac
apresentação/12/src/: Makefile  Makefile.in  hello  main.c
apresentação/12/src/.deps/: main.Po
