AC_INIT([epp], 1.0)

AC_PROG_GO # GO compiler
AC_PROG_OBJC # Objective C compiler
AC_PROG_CXX # C++ compiler
AC_PROG_OBJCXX # Objective C++ compiler
AC_PROG_FC # Check for compilers for Fortran 77, Fortran 90, and Fortran 95
AC_PROG_F77 # Check for all Fortran 77 compilers
AC_PROG_F77([fl32 f77]) # Check for specific Fortran 77 compilers

AC_OUTPUT
