AC_INIT([epp], [1.0])

m4_include([m4/checks.m4])

AC_PROG_CC
AC_PROG_CXX

AC_LANG_PUSH([C])

CHECK_C_STANDARD([11], [201112L])  # C11
CHECK_C_STANDARD([17], [201710L])  # C17
CHECK_C_STANDARD([23], [202311L])  # C23

AC_LANG_POP([C])

AC_LANG_PUSH([C++])

CHECK_CXX_STANDARD([11], [201103L])  # C++11
CHECK_CXX_STANDARD([14], [201402L])  # C++14
CHECK_CXX_STANDARD([17], [201703L])  # C++17
CHECK_CXX_STANDARD([20], [202002L])  # C++20
CHECK_CXX_STANDARD([23], [202302L])  # C++23
CHECK_CXX_STANDARD([26], [])         # C++26

AC_LANG_POP([C++])

AC_OUTPUT
