AC_INIT([2.781pp], [2.781])

m4_include([m4/checks.m4])

CHECK_CFLAG([-ansi])
CHECK_CFLAG([-std=c89])
CHECK_CFLAG([-std=c90])
CHECK_CFLAG([-std=c9x])
CHECK_CFLAG([-std=c99])
CHECK_CFLAG([-std=c11])
CHECK_CFLAG([-std=c1x])
CHECK_CFLAG([-std=c18])
CHECK_CFLAG([-std=c23])
CHECK_CFLAG([-std=c2x])
CHECK_CFLAG([-O1])
CHECK_CFLAG([-O2])
CHECK_CFLAG([-O3])

# GNU dialects of c
CHECK_CFLAG([-std=gnu89])
CHECK_CFLAG([-std=gnu90])
CHECK_CFLAG([-std=gnu99])
CHECK_CFLAG([-std=gnu9x])
CHECK_CFLAG([-std=gnu11])
CHECK_CFLAG([-std=gnu1x])
CHECK_CFLAG([-std=gnu17])
CHECK_CFLAG([-std=gnu18])
CHECK_CFLAG([-std=gnu23])
CHECK_CFLAG([-std=gnu2x])

CHECK_CFLAG([-fno-asm])
CHECK_CFLAG([-fno-builtin])
CHECK_CFLAG([-fno-builtin-function])
CHECK_CFLAG([-fhosted])
CHECK_CFLAG([-flax-vector-conversions])
CHECK_CFLAG([-fms-extensions])
CHECK_CFLAG([-fplan9-extensions])
CHECK_CFLAG([-fsigned-bitfields])
CHECK_CFLAG([-funsigned-bitfields])
CHECK_CFLAG([-fno-signed-bitfields])
CHECK_CFLAG([-fno-unsigned-bitfields])
CHECK_CFLAG([-fsigned-char])
CHECK_CFLAG([-funsigned-char])
CHECK_CFLAG([-fstrict-flex-arrays])

CHECK_CXXFLAG([-ansi])
CHECK_CXXFLAG([-std=c++98])
CHECK_CXXFLAG([-std=c++03])
CHECK_CXXFLAG([-std=c++11])
CHECK_CXXFLAG([-std=c++0x])
CHECK_CXXFLAG([-std=c++14])
CHECK_CXXFLAG([-std=c++1y])
CHECK_CXXFLAG([-std=c++17])
CHECK_CXXFLAG([-std=c++1z])
CHECK_CXXFLAG([-std=c++20])
CHECK_CXXFLAG([-std=c++2a])
CHECK_CXXFLAG([-std=c++23])
CHECK_CXXFLAG([-std=c++2b])
CHECK_CXXFLAG([-std=c++26])
CHECK_CXXFLAG([-std=c++2c])

CHECK_CXXFLAG([-O1])
CHECK_CXXFLAG([-O2])
CHECK_CXXFLAG([-O3])

# GNU dialects of c++
CHECK_CXXFLAG([-std=gnu++98])
CHECK_CXXFLAG([-std=gnu++03])
CHECK_CXXFLAG([-std=gnu++11])
CHECK_CXXFLAG([-std=gnu++0x])
CHECK_CXXFLAG([-std=gnu++14])
CHECK_CXXFLAG([-std=gnu++1y])
CHECK_CXXFLAG([-std=gnu++17])
CHECK_CXXFLAG([-std=gnu++1z])
CHECK_CXXFLAG([-std=gnu++20])
CHECK_CXXFLAG([-std=gnu++2a])
CHECK_CXXFLAG([-std=gnu++23])
CHECK_CXXFLAG([-std=gnu++2b])
CHECK_CXXFLAG([-std=gnu++2c])
CHECK_CXXFLAG([-std=gnu++26])

CHECK_CXXFLAG([-faligned-new])
CHECK_CXXFLAG([-fchar8_t])
CHECK_CXXFLAG([-fno-char8_t])
CHECK_CXXFLAG([-fcheck-new])
CHECK_CXXFLAG([-fconcepts])
CHECK_CXXFLAG([-fcontracts])
CHECK_CXXFLAG([-fcoroutines])
CHECK_CXXFLAG([-fmodules])
CHECK_CXXFLAG([-fno-modules])
CHECK_CXXFLAG([-nostdinc++])

CHECK_FCFLAG([-std=gnu])
CHECK_FCFLAG([-std=f95])
CHECK_FCFLAG([-std=f2003])
CHECK_FCFLAG([-std=legacy])

CHECK_FCFLAG([-O3])
CHECK_FCFLAG([-O0])
CHECK_FCFLAG([-O1])
CHECK_FCFLAG([-O2])
CHECK_FCFLAG([-O3])
CHECK_FCFLAG([-g])
CHECK_FCFLAG([-cpp])
CHECK_FCFLAG([-ffree-form])
CHECK_FCFLAG([-ffixed-form])
CHECK_FCFLAG([-fd-lines-as-code])
CHECK_FCFLAG([-fd-lines-as-comment])
CHECK_FCFLAG([-fdefault-double-8])
CHECK_FCFLAG([-fdefault-integer-8])
CHECK_FCFLAG([-fdefault-real-8])
CHECK_FCFLAG([-fdollar-ok])
CHECK_FCFLAG([-fno-backslash])
CHECK_FCFLAG([-fimplicit-none])
CHECK_FCFLAG([-fcray-pointer])

AC_OUTPUT
