AC_INIT([2.781pp], [2.781])

m4_include([m4/checks.m4])

# C Standards
CHECK_CFLAG([-ansi])
CHECK_CFLAG([-std=c89])
CHECK_CFLAG([-std=c90])
CHECK_CFLAG([-std=c9x])
CHECK_CFLAG([-std=c99])
CHECK_CFLAG([-std=c11])
CHECK_CFLAG([-std=c1x])
CHECK_CFLAG([-std=c18])
CHECK_CFLAG([-std=c23])
CHECK_CFLAG([-std=c2x])

# GNU dialects of c
CHECK_CFLAG([-std=gnu89])
CHECK_CFLAG([-std=gnu90])
CHECK_CFLAG([-std=gnu99])
CHECK_CFLAG([-std=gnu9x])
CHECK_CFLAG([-std=gnu11])
CHECK_CFLAG([-std=gnu1x])
CHECK_CFLAG([-std=gnu17])
CHECK_CFLAG([-std=gnu18])
CHECK_CFLAG([-std=gnu23])
CHECK_CFLAG([-std=gnu2x])

# Some more common flags
CHECK_CFLAG([-O1])
CHECK_CFLAG([-O2])
CHECK_CFLAG([-O3])
CHECK_CFLAG([-g])
CHECK_CFLAG([-ggdb3])
CHECK_CFLAG([-Wall])
CHECK_CFLAG([-Wextra])
CHECK_CFLAG([-Werror])
CHECK_CFLAG([-Wpedantic])
CHECK_CFLAG([-fsanitize=address])

# Specific C flags
CHECK_CFLAG([-fno-asm])
CHECK_CFLAG([-fno-builtin])
CHECK_CFLAG([-fno-builtin-function])
CHECK_CFLAG([-fhosted])
CHECK_CFLAG([-flax-vector-conversions])
CHECK_CFLAG([-fms-extensions])
CHECK_CFLAG([-fplan9-extensions])
CHECK_CFLAG([-fsigned-bitfields])
CHECK_CFLAG([-funsigned-bitfields])
CHECK_CFLAG([-fno-signed-bitfields])
CHECK_CFLAG([-fno-unsigned-bitfields])
CHECK_CFLAG([-fsigned-char])
CHECK_CFLAG([-funsigned-char])
CHECK_CFLAG([-fstrict-flex-arrays])

# C++ Standards
CHECK_CXXFLAG([-ansi])
CHECK_CXXFLAG([-std=c++98])
CHECK_CXXFLAG([-std=c++03])
CHECK_CXXFLAG([-std=c++11])
CHECK_CXXFLAG([-std=c++0x])
CHECK_CXXFLAG([-std=c++14])
CHECK_CXXFLAG([-std=c++1y])
CHECK_CXXFLAG([-std=c++17])
CHECK_CXXFLAG([-std=c++1z])
CHECK_CXXFLAG([-std=c++20])
CHECK_CXXFLAG([-std=c++2a])
CHECK_CXXFLAG([-std=c++23])
CHECK_CXXFLAG([-std=c++2b])
CHECK_CXXFLAG([-std=c++26])
CHECK_CXXFLAG([-std=c++2c])

# GNU dialects of c++
CHECK_CXXFLAG([-std=gnu++98])
CHECK_CXXFLAG([-std=gnu++03])
CHECK_CXXFLAG([-std=gnu++11])
CHECK_CXXFLAG([-std=gnu++0x])
CHECK_CXXFLAG([-std=gnu++14])
CHECK_CXXFLAG([-std=gnu++1y])
CHECK_CXXFLAG([-std=gnu++17])
CHECK_CXXFLAG([-std=gnu++1z])
CHECK_CXXFLAG([-std=gnu++20])
CHECK_CXXFLAG([-std=gnu++2a])
CHECK_CXXFLAG([-std=gnu++23])
CHECK_CXXFLAG([-std=gnu++2b])
CHECK_CXXFLAG([-std=gnu++2c])
CHECK_CXXFLAG([-std=gnu++26])

# Some more common flags
CHECK_CXXFLAG([-O1])
CHECK_CXXFLAG([-O2])
CHECK_CXXFLAG([-O3])
CHECK_CXXFLAG([-g])
CHECK_CXXFLAG([-ggdb3])
CHECK_CXXFLAG([-Wall])
CHECK_CXXFLAG([-Wextra])
CHECK_CXXFLAG([-Werror])
CHECK_CXXFLAG([-Wpedantic])
CHECK_CXXFLAG([-fsanitize=address])

# Specific C++ flags
CHECK_CXXFLAG([-faligned-new])
CHECK_CXXFLAG([-fchar8_t])
CHECK_CXXFLAG([-fno-char8_t])
CHECK_CXXFLAG([-fcheck-new])
CHECK_CXXFLAG([-fconcepts])
CHECK_CXXFLAG([-fcontracts])
CHECK_CXXFLAG([-fcoroutines])
CHECK_CXXFLAG([-fmodules])
CHECK_CXXFLAG([-fno-modules])
CHECK_CXXFLAG([-nostdinc++])

# Testing based on the gfortran command
CHECK_FCFLAG([-std=gnu])
CHECK_FCFLAG([-std=f95])
CHECK_FCFLAG([-std=f2003])
CHECK_FCFLAG([-std=legacy])

# Some more common Fortran flags
CHECK_FCFLAG([-O3])
CHECK_FCFLAG([-O0])
CHECK_FCFLAG([-O1])
CHECK_FCFLAG([-O2])
CHECK_FCFLAG([-O3])
CHECK_FCFLAG([-g])
CHECK_FCFLAG([-cpp])

# GFortran Flags
CHECK_FCFLAG([-ffree-form])
CHECK_FCFLAG([-ffixed-form])
CHECK_FCFLAG([-fd-lines-as-code])
CHECK_FCFLAG([-fd-lines-as-comment])
CHECK_FCFLAG([-fdefault-double-8])
CHECK_FCFLAG([-fdefault-integer-8])
CHECK_FCFLAG([-fdefault-real-8])
CHECK_FCFLAG([-fdollar-ok])
CHECK_FCFLAG([-fno-backslash])
CHECK_FCFLAG([-fimplicit-none])
CHECK_FCFLAG([-fcray-pointer])

AC_OUTPUT
